Add delete posts functionality

--- a/src/components/Card.module.css
+++ b/src/components/Card.module.css
@@ -19,15 +19,30 @@
   word-break: break-word;
 }
 
-.cardButtons {
+.cardButtons-container {
   display: flex;
   flex-direction: column;
   align-items: flex-end;
   justify-content: space-between;
 }
 
-.cardButtons div {
+.cardButtons-container div {
   display: flex;
   flex-direction: row;
   align-items: center;
+}
+
+.cardButton {
+  cursor: pointer !important;
+}
+
+@media (max-width: 768px) {
+  .card {
+    flex-direction: column;
+  }
+  .cardButtons-container {
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+  }
 }
