--- a/src/components/Column.module.css
+++ b/src/components/Column.module.css
@@ -32,3 +32,9 @@
 .addButton:hover {
   background-color: rgb(100, 100, 100);
 }
+
+@media screen and (max-width: 450px) {
+  .column-header {
+    font-size: 0.8em;
+  }
+}
