--- a/src/components/Column.module.css
+++ b/src/components/Column.module.css
@@ -45,16 +45,23 @@
   border: 3px solid #fff;
   border-radius: 10px;
   box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-  content: '';
   padding: 20px;
 }
 
 .colorPickerBlock {
   position: absolute;
+  top: 55px;
+  left: -65px;
 }
 
-@media screen and (max-width: 450px) {
+@media screen and (max-width: 768px) {
+  .column {
+    width: 100%;
+  }
   .column-header {
     font-size: 0.8em;
+  }
+  .colorPickerBlock {
+    left: -120px;
   }
 }
