--- a/src/pages/Home.module.css
+++ b/src/pages/Home.module.css
@@ -6,3 +6,9 @@
   min-height: 100vh;
   margin: 0 auto;
 }
+
+@media screen and (max-width: 768px) {
+  .main {
+    flex-direction: column;
+  }
+}
